Change requirement Service