@@ -1,50 +1,38 @@
 package by.kozlov.spring.service;
 
-import by.kozlov.spring.dto.RequirementDto;
+import by.kozlov.spring.dto.*;
 import by.kozlov.spring.database.entity.Requirement;
-import by.kozlov.spring.mapper.CreateRequirementMapper;
-import by.kozlov.spring.mapper.RequirementMapper;
-import by.kozlov.spring.mapper.UpdateRequirementMapper;
+import by.kozlov.spring.mapper.*;
 import by.kozlov.spring.database.repository.RequirementRepository;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validation;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import by.kozlov.spring.dto.CreateRequirementDto;
-import by.kozlov.spring.dto.UpdateRequirementDto;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class RequirementService {
 
     private final RequirementRepository requirementRepository;
-    private final CreateRequirementMapper createRequirementMapper;
-    private final UpdateRequirementMapper updateRequirementMapper;
-    private final RequirementMapper requirementMapper;
+    private final RequirementReadMapper requirementReadMapper;
+    private final RequirementCreateEditMapper requirementCreateEditMapper;
 
-    @Autowired
-    public RequirementService(RequirementRepository requirementRepository,
-                              CreateRequirementMapper createRequirementMapper,
-                              UpdateRequirementMapper updateRequirementMapper,
-                              RequirementMapper requirementMapper) {
-        this.requirementRepository = requirementRepository;
-        this.createRequirementMapper = createRequirementMapper;
-        this.updateRequirementMapper = updateRequirementMapper;
-        this.requirementMapper = requirementMapper;
-    }
-
-    public List<RequirementDto> findAllBySetId(Integer id) {
+    public List<RequirementReadDto> findAllBySetId(Integer id) {
 
         return requirementRepository.findAllBySetId(id).stream()
-                .map(requirementMapper::mapFrom).collect(Collectors.toList());
+                .map(requirementReadMapper::map).toList();
     }
 
-    public List<RequirementDto> findAll() {
+    public List<RequirementReadDto> findAll() {
         return requirementRepository.findAll().stream()
-                .map(requirementMapper::mapFrom).collect(Collectors.toList());
+                .map(requirementReadMapper::map).toList();
     }
 
     public List<Object[]> findSumReqMaterials() {
@@ -53,12 +41,12 @@ public class RequirementService {
         return sum;
     }
 
-    public Optional<RequirementDto> findById(Integer id) {
+    public Optional<RequirementReadDto> findById(Integer id) {
         return requirementRepository.findById(id)
-                .map(requirementMapper::mapFrom);
+                .map(requirementReadMapper::map);
     }
 
-    public Integer create(CreateRequirementDto requirementDto) {
+    public RequirementReadDto create(RequirementCreateEditDto requirementDto) {
         try (var validationFactory = Validation.buildDefaultValidatorFactory()) {
 
             var validator = validationFactory.getValidator();
@@ -66,20 +54,24 @@ public class RequirementService {
             if (!validationResult.isEmpty()) {
                 throw new ConstraintViolationException(validationResult);
             }
-            var productionEntity = createRequirementMapper.mapFrom(requirementDto);
-            productionEntity = requirementRepository.saveAndFlush(productionEntity);
-            return productionEntity.getId();
+            return Optional.of(requirementDto)
+                    .map(requirementCreateEditMapper::map)
+                    .map(requirementRepository::save)
+                    .map(requirementReadMapper::map)
+                    .orElseThrow();
         }
     }
 
     public boolean delete(Integer id) {
-        Optional<Requirement> maybe;
-        maybe = requirementRepository.findById(id);
-        maybe.ifPresent(it -> requirementRepository.delete(maybe.orElseThrow()));
-        return maybe.isPresent();
+        return requirementRepository.findById(id)
+                .map(entity -> {
+                    requirementRepository.delete(entity);
+                    requirementRepository.flush();
+                    return true;
+                }).orElse(false);
     }
 
-    public void update(UpdateRequirementDto requirementDto) {
+    public Optional<RequirementReadDto> update(Integer id, RequirementCreateEditDto requirementDto) {
 
         try (var validationFactory = Validation.buildDefaultValidatorFactory()) {
 
@@ -88,8 +80,10 @@ public class RequirementService {
             if (!validationResult.isEmpty()) {
                 throw new ConstraintViolationException(validationResult);
             }
-            var productionEntity = updateRequirementMapper.mapFrom(requirementDto);
-            requirementRepository.saveAndFlush(productionEntity);
+            return requirementRepository.findById(id)
+                    .map(entity -> requirementCreateEditMapper.map(requirementDto,entity))
+                    .map(requirementRepository::saveAndFlush)
+                    .map(requirementReadMapper::map);
         }
     }
 }
